--- a/app/cards/index/template.hbs
+++ b/app/cards/index/template.hbs
@@ -1,8 +1,6 @@
 
-<li>{{#link-to 'cards.create'}}New Items{{/link-to}}</li>
+{{!-- <li>{{#link-to 'cards.create'}}New Items{{/link-to}}</li> --}}
 {{#each model as |card|}}
     <p>{{card.name}}</p>
     <p>{{card.description}}</p>
-
-
 {{/each}}
