--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -1,6 +1,7 @@
 
-{{!-- <li>{{#link-to 'cards.create'}}New Items{{/link-to}}</li> --}}
+<li>{{#link-to 'courses.card-sets.cards.index'}}New Items{{/link-to}}</li>
 {{#each model as |card|}}
     <p>{{card.name}}</p>
     <p>{{card.description}}</p>
+
 {{/each}}
