Create new card showing up now

--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -1,7 +1,9 @@
 
 <li>{{#link-to 'courses.card-sets.cards.index'}}New Items{{/link-to}}</li>
 {{#each model as |card|}}
-    <p>{{card.name}}</p>
-    <p>{{card.description}}</p>
+    <h2>{{card.name}}</h2>
+    <h2>{{card.description}}</h2>
 
 {{/each}}
+
+
