Created new form template

--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -1,5 +1,5 @@
 
-<li>{{#link-to 'courses.card-sets.cards.index'}}New Items{{/link-to}}</li>
+<li>{{#link-to 'courses.card-sets.cards.create'}}New Items{{/link-to}}</li>
 {{#each model as |card|}}
     <h2>{{card.name}}</h2>
     <h2>{{card.description}}</h2>
