--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
 <h2 id="title">Welcome to Ember</h2>
 
     <ul>
-        <li>{{#link-to 'courses.card-sets.cards.index'}}Menu{{/link-to}}</li>
+        <li>{{#link-to 'courses'}}Courses{{/link-to}}</li>
+
+        <li>{{#link-to 'courses.card-sets.cards.index'}}Cards{{/link-to}}</li>
     </ul>
 
 {{outlet}}
