Commited template for course

--- a/app/courses/template.hbs
+++ b/app/courses/template.hbs
@@ -1,7 +1,7 @@
 <h3>Different Courses</h3>
 
 {{#each model as |courses|}}
-    <h2>{{courses.name}}</h2>
+    <a href="{{courses.name}}">{{courses.name}}</a>
 
 
 {{/each}}
