trying to get on Santi's level

--- a/app/courses/card-sets/template.hbs
+++ b/app/courses/card-sets/template.hbs
@@ -1,1 +1,19 @@
 {{outlet}}
+
+{{#md-card title="Yard-Cards"
+    titleClass="grey-text"
+    image="images/ember-9a2571346ddbec766fbe11304e74e784.png"
+    id="image-card"}}
+
+    {{#md-card-content}}
+        I am a very simple card. I am good at containing
+        small bits of information. I am convenient because
+        I require little markup to use effectively. if you have a yearning for learning, the flashyard is your new memory hub.
+
+        So now..Ask yourself...Are you ready to get schooled... Click on whatever knowledge you want us to drop..
+    {{/md-card-content}}
+
+    {{#md-card-action}}
+        {{#link-to 'courses'}}Courses{{/link-to}}
+    {{/md-card-action}}
+{{/md-card}}
