--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -5,3 +5,18 @@
     <p>{{card.description}}</p>
 
 {{/each}}
+
+{{#md-card title="Card Title"
+    image="images/ember-cli-97c3f0d28532b75fa808f590062af5de.png"
+    activator=true
+    id="card-reveal"}}
+
+    {{#md-card-content}}
+        {{#link-to "cards"}}This is a Link{{/link-to}}
+    {{/md-card-content}}
+
+    {{#md-card-reveal}}
+        Here is some more information about this product that is only revealed once clicked on.
+    {{/md-card-reveal}}
+
+{{/md-card}}
