--- a/app/courses/template.hbs
+++ b/app/courses/template.hbs
@@ -1,7 +1,1 @@
-<h3>Different Courses</h3>
-
-{{#each model as |courses|}}
-    <a href="{{courses.name}}">{{courses.name}}</a>
-
-
-{{/each}}
+{{outlet}}
