--- a/app/courses/card-sets/template.hbs
+++ b/app/courses/card-sets/template.hbs
@@ -1,5 +1,1 @@
-{{!-- model is the current course --}}
-{{#each model.cardsets as |cardset|}}
-    <h2>{{cardset.name}}</h2>
-    <h2>{{cardset.description}}</h2>
-{{/each}}
+{{outlet}}
