--- a/app/components/new-form/template.hbs
+++ b/app/components/new-form/template.hbs
@@ -1,9 +1,9 @@
 <form class="new-form" {{action 'save' on='submit'}}>
-<label for="name">Name</label>
-  {{input type='text' value=name}}
+<label for="name">Front</label>
+  {{input type='text' value=front}}
 
-<label for="description">Description</label>
-  {{input type='text' value=description}}
+<label for="description">Back</label>
+  {{input type='text' value=back}}
 
     <button type='submit'>Save</button>
 </form>
