--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -1,8 +1,20 @@
-
 <li>{{#link-to 'courses.card-sets.cards.create'}}New Items{{/link-to}}</li>
+
 {{#each model.cards as |card|}}
-    <h2>{{card.name}}</h2>
-    <h2>{{card.description}}</h2>
+    {{#md-card
+        image='images/test'
+        title=card.front
+        activator=true}}
+
+        {{#md-card-content}}
+            {{card.front}}
+        {{/md-card-content}}
+
+        {{#md-card-reveal}}
+            {{card.back}}
+        {{/md-card-reveal}}
+
+    {{/md-card}}
 {{/each}}
 
 {{!-- {{#md-card title="Card Title"
