Created a new course form to allow to add new courses

--- a/app/components/new-form/template.hbs
+++ b/app/components/new-form/template.hbs
@@ -5,5 +5,8 @@
 <label for="description">Back</label>
   {{input type='text' value=back}}
 
+<label for="category">Category</label>
+  {{input type='text' value=category}}
+
     <button type='submit'>Save</button>
 </form>
