--- a/app/courses/index/template.hbs
+++ b/app/courses/index/template.hbs
@@ -1,8 +1,11 @@
 <h2>Courses</h2>
-
+    {{#link-to 'courses.create'}}
+        {{link-to 'Create New Course' 'courses.create'}}
+    {{/link-to}}
 {{!-- Shows a list of courses and links to the cardsets for that course --}}
 {{#md-collection content=model as |course|}}
     {{#link-to 'courses.card-sets' course.id class='collection-item'}}
         {{course.name}}
     {{/link-to}}
+
 {{/md-collection}}
