--- a/app/courses/card-sets/index/template.hbs
+++ b/app/courses/card-sets/index/template.hbs
@@ -1,5 +1,9 @@
 <h2>Cardsets for {{model.name}}</h2>
 
+    {{#link-to 'courses.card-sets.create'}}
+        {{link-to 'Create New Card Set' 'courses.card-sets.create'}}
+    {{/link-to}}
+
 {{!-- Shows a list of cardsets for the current course and links to the cards index for that cardset --}}
 {{#md-collection content=model.cardSets as |cardSet|}}
     {{#link-to 'courses.card-sets.cards' cardSet.id class='collection-item'}}
