Updated card create template

--- a/app/components/new-form/template.hbs
+++ b/app/components/new-form/template.hbs
@@ -1,12 +1,9 @@
 <form class="new-form" {{action 'save' on='submit'}}>
 <label for="name">Front</label>
-  {{input type='text' value=front}}
+  {{input type='text' value=frontText}}
 
 <label for="description">Back</label>
-  {{input type='text' value=back}}
-
-<label for="category">Category</label>
-  {{input type='text' value=category}}
+  {{input type='text' value=backText}}
 
     <button type='submit'>Save</button>
 </form>
