--- a/app/courses/index/template.hbs
+++ b/app/courses/index/template.hbs
@@ -6,6 +6,9 @@
 {{#md-collection content=model as |course|}}
     {{#link-to 'courses.card-sets' course.id class='collection-item'}}
         {{course.name}}
+        {{link-to 'Delete' 'courses.edit' course}}
     {{/link-to}}
+
+
 
 {{/md-collection}}
