Added copyright footer on page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,3 +14,18 @@
 
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
+
+
+<footer>
+    <div class="container">
+
+    </div>
+
+    {{#md-copyright text='Copyright The Iron Yard - LR Class of 2015'
+        startYear=2015
+        class='white-text blue-grey darken-3'}}
+        <a class="white-text right" href="http://theironyard.com/locations/little-rock/">
+          More Links
+        </a>
+    {{/md-copyright}}
+</footer>
