Commented out footer/copyright section

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,7 +15,7 @@
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
 
-
+{{!--
 <footer>
     <div class="container">
 
@@ -28,4 +28,4 @@
           More Links
         </a>
     {{/md-copyright}}
-</footer>
+</footer> --}}
