Corrected delete function for courses.  Created edit folder under card sets

--- a/app/courses/card-sets/index/template.hbs
+++ b/app/courses/card-sets/index/template.hbs
@@ -8,5 +8,7 @@
 {{#md-collection content=model.cardSets as |cardSet|}}
     {{#link-to 'courses.card-sets.cards' cardSet.id class='collection-item'}}
         {{cardSet.name}}
+
+        <a href="#" {{action 'deleteCourse' cardSet}} class="secondary-content">Delete</a>
     {{/link-to}}
 {{/md-collection}}
