--- a/app/courses/index/template.hbs
+++ b/app/courses/index/template.hbs
@@ -6,7 +6,8 @@
 {{#md-collection content=model as |course|}}
     {{#link-to 'courses.card-sets' course.id class='collection-item'}}
         {{course.name}}
-        {{link-to 'Delete' 'courses.edit' course}}
+
+        <a href="#" {{action 'deleteCourse' course}} class="secondary-content">Delete</a>
     {{/link-to}}
 
 
