Configured confirmation box when delete is clicked

--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -1,4 +1,4 @@
-<li>{{#link-to 'courses.card-sets.cards.create'}}New Items{{/link-to}}</li>
+<li>{{#link-to 'courses.card-sets.cards.create'}}Create New Card{{/link-to}}</li>
 
 {{#each model.cards as |card|}}
     {{#md-card
