Added delete option with confirmation box when deleting a card set

--- a/app/courses/card-sets/index/template.hbs
+++ b/app/courses/card-sets/index/template.hbs
@@ -9,6 +9,6 @@
     {{#link-to 'courses.card-sets.cards' cardSet.id class='collection-item'}}
         {{cardSet.name}}
 
-        <a href="#" {{action 'deleteCourse' cardSet}} class="secondary-content">Delete</a>
+        <a href="#" {{action 'deleteCardSet' cardSet}} class="secondary-content">Delete</a>
     {{/link-to}}
 {{/md-collection}}
