Applied grid row/column for card view

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
   <!-- A workaround to get the "active" class
     to apply to the active <li> automatically -->
   {{#link-to 'courses' tagName='li'}}
-    {{link-to 'Courses' 'courses'}}
+    {{link-to 'Get Started' 'courses'}}
   {{/link-to}}
 {{/md-navbar}}
 
