Added delete function for specific card

--- a/app/courses/card-sets/cards/index/template.hbs
+++ b/app/courses/card-sets/cards/index/template.hbs
@@ -8,7 +8,7 @@
         activator=true}}
 
         {{#md-card-content}}
-
+        <a href="#" {{action 'deleteCard' card}} class="secondary-content">Delete</a>
         {{/md-card-content}}
 
         {{#md-card-reveal}}
