--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,3 +27,32 @@
     padding: 1px;
 }
 
+.container-about {
+    color: whitespace;
+}
+
+.intro h2 {
+    color: white;
+    text-transform: uppercase;
+    display: inline-block
+}
+
+.about {
+    background: rgba(0,0,0, 0.2);
+    box-shadow: 0 0 1em 0 rgba(0,0,0, 0.2);
+    padding: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+    .col {
+        margin-bottom: 24px;
+    }
+
+    h4 {
+        color: white;
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 15px;
+    }
+
+
