--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{#md-navbar name='Flashyard' class='blue-grey darken-3'}}
+{{#md-navbar name='Flashyard' class='amber lighten-1'}}
   <!-- A workaround to get the "active" class
     to apply to the active <li> automatically -->
   {{#link-to 'courses' tagName='li'}}
@@ -6,17 +6,21 @@
   {{/link-to}}
 {{/md-navbar}}
 
-<div class="background {{if background 'active' ''}}"></div>
+<div class="background {{if background 'active' ''}}">
+
+
+
+</div>
 
 <div class="container">
-    {{liquid-outlet}}
+  {{liquid-outlet}}
 </div>
 
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
 
 
-<footer>
+-- <footer>
     <div class="container">
 
     </div>
@@ -28,4 +32,4 @@
           More Links
         </a>
     {{/md-copyright}}
-</footer>
+</footer> --}}
